--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,7 +3,7 @@
 # mod_rewrite). Additionally, this reduces the matching process for the
 # start page (path "/") because otherwise Apache will apply the rewriting rules
 # to each configured DirectoryIndex file (e.g. index.php, index.html, index.pl).
-DirectoryIndex index.html
+DirectoryIndex index.php
 
 # By default, Apache does not evaluate symbolic links if you did not enable this
 # feature in your server configuration. Uncomment the following line if you
@@ -19,6 +19,9 @@ DirectoryIndex index.html
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
+    setEnvIf Authorization "(.*)"HTTP_AUTHORIZATION=$1
+    setEnvIf Content-Type "(.*)"HTTP_CONTENT_TYPE=$1
+    setEnvIf Accept "(.*)" HTTP_ACCEPT=$1
 
     # Determine the RewriteBase automatically and set it as environment variable.
     # If you are using Apache aliases to do mass virtual hosting or installed the
