--- a/public/.htaccess
+++ b/public/.htaccess
@@ -9,7 +9,7 @@ DirectoryIndex index.html
 # feature in your server configuration. Uncomment the following line if you
 # install assets as symlinks or if you experience problems related to symlinks
 # when compiling LESS/Sass/CoffeScript assets.
-Options +FollowSymlinks
+# Options +FollowSymlinks
 
 # Disabling MultiViews prevents unwanted negotiation, e.g. "/index" should not resolve
 # to the front controller "/index.php" but be rewritten to "/index.php/index".
@@ -30,12 +30,12 @@ Options +FollowSymlinks
     # work in environments without path prefix as well, providing a safe, one-size
     # fits all solution. But as you do not need it in this case, you can comment
     # the following 2 lines to eliminate the overhead.
-    #RewriteCond %{REQUEST_URI}::$0 ^(/.+)/(.*)::\2$
-    #RewriteRule .* - [E=BASE:%1]
+    RewriteCond %{REQUEST_FILENAME} -f
+    RewriteRule .? - [L]
 
     # Sets the HTTP_AUTHORIZATION header removed by Apache
-    #RewriteCond %{HTTP:Authorization} .+
-    #RewriteRule ^ - [E=HTTP_AUTHORIZATION:%0]
+    RewriteCond %{HTTP:Authorization} .+
+    RewriteRule .? %{ENV:BASE}/index.php [L]
 
     # Redirect to URI without front controller to prevent duplicate content
     # (with and without `/index.php`). Only do this redirect on the initial
