--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
         "fetch": "^1.1.0",
         "react-router-dom": "^5.2.0",
         "yarn": "^1.22.10"
+    },
+    "engines": {
+        "node": "14.15.4",
+        "npm": "6.14.10"
     }
 }
