--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
         "watch": "encore dev --watch",
         "build": "encore production --progress",
         "webpack": "webpack",
-        "start": "http-server",
-        "heroku-postbuild" : "node_modules/.bin/encore production"
+        "start": "http-server"
     },
     "dependencies": {
         "axentix": "^1.2.1",
@@ -37,9 +36,5 @@
         "fetch": "^1.1.0",
         "react-router-dom": "^5.2.0",
         "yarn": "^1.22.10"
-    },
-    "engines": {
-        "node": "14.15.4",
-        "npm": "6.14.10"
     }
 }
