--- a/composer.json
+++ b/composer.json
@@ -99,6 +99,11 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "compile":[
+            "npm install",
+            "npm install @symfony/webpack-encore --save-dev",
+            "npm run dev"
         ]
     },
     "conflict": {
