--- a/public/.htaccess
+++ b/public/.htaccess
@@ -47,7 +47,7 @@ DirectoryIndex index.html
     #   following RewriteCond (best solution)
     RewriteCond %{ENV:REDIRECT_STATUS} =""
     RewriteRule ^index\.php(?:/(.*)|$) %{ENV:BASE}/$1 [R=301,L]
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
     # If the requested filename exists, simply serve it.
     # We only want to let Apache serve files and not directories.
