--- a/public/.htaccess
+++ b/public/.htaccess
@@ -47,6 +47,8 @@ DirectoryIndex index.html
     #   following RewriteCond (best solution)
     RewriteCond %{ENV:REDIRECT_STATUS} =""
     RewriteRule ^index\.php(?:/(.*)|$) %{ENV:BASE}/$1 [R=301,L]
+    RewriteCond %{HTTPS} !=on
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
     # If the requested filename exists, simply serve it.
     # We only want to let Apache serve files and not directories.
